--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -528,7 +528,7 @@ service drm /system/bin/drmserver
 service media /system/bin/mediaserver
     class main
     user media
-    group audio camera inet net_bt net_bt_admin net_bw_acct drmrpc mediadrm qcom_diag
+    group audio camera inet net_bt net_bt_admin net_bw_acct drmrpc qcom_diag mediadrm nvram ccci radio
     ioprio rt 4
 
 service bootanim /system/bin/bootanimation
