--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -732,14 +732,13 @@ service installd /system/bin/installd
     class main
     socket installd stream 600 system system
 
-service flash_recovery /system/bin/install-recovery.sh
-    class main
-    oneshot
-    disabled
+#service flash_recovery /system/bin/install-recovery.sh
+#    class main
+#    oneshot
+#    disabled
 
-# update recovery if enabled
-on property:persist.sys.recovery_update=true
-    start flash_recovery
+#on property:persist.sys.recovery_update=true
+#    start flash_recovery
 
 service racoon /system/bin/racoon
     class main
